# anthropic-sdk

./: Cargo.toml
crates/anthropic/: Cargo.toml
crates/anthropic/src/: anthropic.rs  messages.rs
crates/bedrock/: Cargo.toml
crates/bedrock/src/: bedrock.rs
crates/vertex_ai/: Cargo.toml
crates/vertex_ai/src/: vertex_ai.rs
crates/vertexai/: Cargo.toml
crates/vertexai/src/: vertexai.rs
