[workspace]
resolver = "2"
members = ["crates/anthropic", "crates/bedrock", "crates/vertex_ai"]

[workspace.dependencies]
anthropic = { path = "crates/anthropic" }
anthropic_bedrock = { path = "crates/bedrock" }
anthropic_vertex_ai = { path = "crates/vertex_ai" }
anyhow = "1"
async-stream = "0.3.5"
async-trait = "0.1.81"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
