[workspace]
resolver = "2"
members = ["crates/anthropic", "crates/bedrock", "crates/vertexai"]

[workspace.dependencies]
anthropic = { path = "crates/anthropic" }
anthropic_bedrock = { path = "crates/bedrock" }
anthropic_vertexai = { path = "crates/vertexai" }
anyhow = "1"
async-stream = "0.3.5"
async-trait = "0.1.81"
futures = "0.3"
http-client = { git = "https://github.com/fdionisi/http-client", rev = "c4a778815ecb94411f7db6385052655b181a9676" }
http-client-eventsource = { git = "https://github.com/fdionisi/http-client-eventsource", rev = "32103c902afb6ab18e934f8e1f0e597614f86cef" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", rev = "c4a778815ecb94411f7db6385052655b181a9676" }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
