[package]
name = "anthropic"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/anthropic.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
http-client.workspace = true
http-client-eventsource.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
http-client-reqwest.workspace = true
