[package]
name = "anthropic_bedrock"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/bedrock.rs"

[dependencies]
anthropic.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
aws-config = "1.5.5"
aws-sdk-bedrockruntime = "1.45.0"
aws-smithy-types = { version = "1.2.2", features = [
    "serde-deserialize",
    "serde-serialize",
] }
aws-types = "1.3.3"
futures.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
futures.workspace = true
tokio.workspace = true
