[package]
name = "anthropic_vertexai"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/vertexai.rs"

[dependencies]
anthropic.workspace = true
anyhow.workspace = true
async-trait.workspace = true
google-cloud-auth = "0.16.0"
google-cloud-token = "0.1.2"
http-client.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
futures.workspace = true
tokio.workspace = true
http-client-reqwest.workspace = true
